--- a/css/style.css
+++ b/css/style.css
@@ -6596,3 +6596,15 @@ dd {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
