--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -25,7 +25,8 @@ html {
 .clearfix {
   *zoom: 1;
 
-  &:before, &:after {
+  &:before,
+  &:after {
     display: table;
     line-height: 0;
     content: "";
@@ -37,15 +38,15 @@ html {
 }
 
 ::-moz-selection {
-  background-color: #fdf0b2;
+  background-color: #E6F8F5;
 }
 
 ::-webkit-selection {
-  background-color: #fdf0b2;
+  background-color: #E6F8F5;
 }
 
 ::selection {
-  background-color: #fdf0b2;
+  background-color: #E6F8F5;
 }
 
 :focus {
@@ -111,13 +112,13 @@ hr {
 /* Preloader
 /*-------------------------------------------------------*/
 .loader-mask {
-  position:fixed;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  background-color:#fff; 
-  z-index:99999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+  z-index: 99999;
 }
 
 .loader {
@@ -127,12 +128,12 @@ hr {
   font-size: 5px;
   width: 5em;
   height: 5em;
-  margin:-25px 0 0 -25px;
+  margin: -25px 0 0 -25px;
   text-indent: -9999em;
   border-top: 0.5em solid $main-color;
-  border-right: 0.5em solid rgba(245,245,245,.5);
-  border-bottom: 0.5em solid rgba(245,245,245,.5);
-  border-left: 0.5em solid rgba(245,245,245,.5);
+  border-right: 0.5em solid rgba(245, 245, 245, .5);
+  border-bottom: 0.5em solid rgba(245, 245, 245, .5);
+  border-left: 0.5em solid rgba(245, 245, 245, .5);
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
@@ -147,5 +148,26 @@ hr {
   height: 10em;
 }
 
-@-webkit-keyframes load8 { 0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); } 100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); }}
-@keyframes load8 { 0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); } 100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); }}
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
