--- a/css/style.css
+++ b/css/style.css
@@ -6224,3 +6224,31 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+/* Partner Slider */
+@keyframes scroll{
+  0%{
+    transform: translateX(0);
+  }
+  100%{
+    transform: translateX(calc(-200px * 4));
+  }
+}
+
+.slider {
+  height: 100px;
+  margin: auto;
+  width: auto;
+  overflow: hidden;
+  position: relative;
+}
+
+.slider .slide-track {
+  animation: scroll 5s linear infinite;
+  width: calc(200px * 8);
+}
+
+.slide-track .slide {
+  height: 100px;
+  width: 200px;
+}
